src/test/ui/borrowck/move-error-snippets.stderr
error[E0507]: cannot move out of static item `D`
  --> $DIR/move-error-snippets-ext.rs:5:17
   |
LL |         let a = $c;
   |                 ^^
   |                 |
   |                 move occurs because `D` has type `A`, which does not implement the `Copy` trait
   |                 help: consider borrowing here: `&$c`
   |
  ::: $DIR/move-error-snippets.rs:21:1
   |
LL | sss!();
   | ------ in this macro invocation
   |
   = note: this error originates in the macro `aaa` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
